# rk_gb

./: CMakeLists.txt  build.sh  envsetup.sh
.github/workflows/: issue-close-sync-dev.yml  issue-repair.yml  issue-runner-preflight.yml  issue-triage.yml
App/: CMakeLists.txt  Main.cpp  Main.h
App/Media/: Alarm.cpp  Camera.cpp  GAT1400CaptureControl.cpp  GAT1400CaptureControl.h  VideoEncodeControl.cpp  VideoEncodeControl.h  VideoImageControl.cpp  VideoImageControl.h
App/Net/: NetConfigHook.cpp
App/Protocol/: ProtocolManager.cpp  ProtocolManager.h
App/Protocol/config/: HttpConfigProvider.cpp  HttpConfigProvider.h  LocalConfigProvider.cpp  LocalConfigProvider.h  ProtocolExternalConfig.h
App/Protocol/gat1400/: GAT1400ClientService.cpp  GAT1400ClientService.h  LowerGAT1400SDK.cpp
App/Protocol/gb28181/: GB28181BroadcastBridge.cpp  GB28181ClientReceiverAdapter.cpp  GB28181ListenBridge.cpp  GB28181ProtocolConstants.h  GB28181RtpPsSender.cpp  GB28181RtpPsSender.h  GbAlarmIdentity.cpp  GbAlarmIdentity.h  MediaServerCompat.h
App/Protocol/gb28181/sdk_port/: CMakeLists.txt
App/Protocol/tests/: GbAlarmIdentityTest.cpp
App/Storage/common/: StorageManager.cpp
App/Storage/lg/: Mp4_Demuxer.cpp  StorageManager.cpp
Middleware/: CMakeLists.txt
Middleware/libmpp/rkipc/src/rv1106_dual_ipc/video/: video.c  video.h
Middleware/libmpp/src/: Capture.c
artifacts/prebuilt/fd36562/: README.md
helloagents/: CHANGELOG.md  project.md
helloagents/history/: index.md
helloagents/history/2026-03/202603161102_issue27_gb_live_tcp/: how.md  task.md  why.md
helloagents/history/2026-03/202603191035_issue30_gb_time_record/: how.md  task.md  why.md
helloagents/history/2026-03/202603201516_issue33_gb_broadcast/: how.md  task.md  why.md
helloagents/history/2026-03/202603201544_gb_broadcast_session_closure/: how.md  task.md  why.md
helloagents/history/2026-03/202603251654_issue38_drop_legacy_gb_config/: task.md
helloagents/history/2026-03/202603251749_sip_response_peer_match_order/: task.md
helloagents/history/2026-03/202603281047_gb_video_encode_media_boundary/: how.md  task.md  why.md
helloagents/history/2026-03/202603281114_gb_video_param_attribute_2022_align/: how.md  task.md  why.md
helloagents/history/2026-03/202603281209_gb_protocol_constants_cleanup/: how.md  task.md  why.md
helloagents/history/2026-03/202603281234_gat1400_capture_media_boundary/: how.md  task.md  why.md
helloagents/history/2026-03/202603281240_gb_frame_mirror_media_boundary/: how.md  task.md  why.md
helloagents/history/2026-03/202603301537_gb_sip_random_local_port/: how.md  task.md  why.md
helloagents/history/2026-03/202603301757_gb_live_tcp_send_backpressure/: task.md
helloagents/history/2026-04/202604011157_gat1400_capture_observer_removal/: how.md  task.md  why.md
helloagents/history/2026-04/202604011408_gat_notify_alarm_entry/: how.md  task.md  why.md
helloagents/history/2026-04/202604011703_gat1400_keepalive_demo_notify_capture/: how.md  task.md  why.md
helloagents/history/2026-04/202604011719_gat1400_keepalive_demo_image_only/: how.md  task.md  why.md
helloagents/history/2026-04/202604021432_gat1400_keepalive_demo_single_shot_split/: how.md  task.md  why.md
helloagents/history/2026-04/202604031701_gb_catalog_required_fields/: task.md
helloagents/history/2026-04/202604071641_gb_talk_audio_output_session_boundary/: task.md
helloagents/history/2026-04/202604081645_issue42_zero_config_redirect_target/: task.md
helloagents/history/2026-04/202604091005_gb_live_mediaf_stream_config/: how.md  task.md  why.md
helloagents/history/2026-04/202604111448_protocol_feature_switch_trim/: task.md
helloagents/history/2026-04/202604131039_issue44_gb_alarm_runtime_device_id/: task.md
helloagents/history/2026-04/202604131401_issue44_gb_alarm_pack_local_id/: how.md  task.md  why.md
helloagents/history/2026-04/202604161722_issue45_gb_gat_register_enabled/: how.md  task.md  why.md
helloagents/wiki/: api.md  arch.md  data.md  overview.md
helloagents/wiki/modules/: gat1400.md  gb28181.md  protocol.md  terminal_requirements.md  zero_config.md
tools/issue_bot/: README.md  build_verify.sh  common.py  example_fix.sh  install_local_timer.sh  local_cycle.sh  local_smoke_test.sh  regression_suite.sh  repair_executor.py  runner_env.example  runner_preflight.sh  sync_closed_issues_to_dev.py  triage_issues.py  triage_rules.py
tools/tests/: issue45_gat_enabled_regression.py
